@@ -2,6 +2,7 @@ Revision history for HTTP-Message
 
 {{$NEXT}}
     - Documented status code 451 in the list of constants (Robert Rothenberg)
+    - Status code 451 is cachable by default, as per RFC 7725 (Robert Rothenberg)
 
 6.16      2018-03-28 14:09:17Z
     - Update status codes to official IANA list (GH#100) (Theo van Hoesel)
